force-app/main/default/objects/Limit_Tracker_Snapshot__c/Limit_Tracker_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Snapshot of the limits consumption of a tracked piece of code.</description>
    <label>Limit Tracker Snapshot</label>
    <nameField>
        <displayFormat>LS-{000000}</displayFormat>
        <label>Limit Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limit Tracker Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>