force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Contains additional information to help diagnose a sudden increase in limits consumption.</description>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>