force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/CPU__c.field-meta.xml
<CustomField>
    <fullName>CPU__c</fullName>
    <description>The CPU time consumed by the tracked code (in milliseconds)</description>
    <label>CPU</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>