force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/DML_Records__c.field-meta.xml
<CustomField>
    <fullName>DML_Records__c</fullName>
    <description>The number of DML records consumed by the tracked code.</description>
    <label>DML Records</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>