force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/DML_Statements_Alert_Threshold_1__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Alert_Threshold_1__c</fullName>
    <formula>Limit_Tracker__r.DML_Statements_Alert_Threshold_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Statements Alert Threshold 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>