force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/Heap__c.field-meta.xml
<CustomField>
    <fullName>Heap__c</fullName>
    <description>The heap consumed by the tracked code in bytes.</description>
    <label>Heap</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>