force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/JSON_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>JSON_Additional_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the additional information provided in JSON format for further processing?</description>
    <label>JSON Additional Info</label>
    <type>Checkbox</type>
</CustomField>