force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/Limit_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Limit_Tracker__c</fullName>
    <description>The parent limit tracker.</description>
    <label>Limit Tracker</label>
    <referenceTo>Limit_Tracker__c</referenceTo>
    <relationshipLabel>Limit Tracker Snapshots</relationshipLabel>
    <relationshipName>Limit_Tracker_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>