force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/Limit_Tracker_Name__c.field-meta.xml
<CustomField>
    <fullName>Limit_Tracker_Name__c</fullName>
    <formula>Limit_Tracker__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Tracker Name</label>
    <type>Text</type>
</CustomField>