force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/SOQL_Queries__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries__c</fullName>
    <description>The number of SOQL queries consumed by the tracked code.</description>
    <label>SOQL Queries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>