force-app/main/default/objects/Limit_Tracker_Snapshot__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user executing the tracked code.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Limit_Tracker_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>